we can click marker to chat in map

--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -107,3 +107,50 @@ Cast : 卡斯,投,阵容,
 cast iron : 铸铁,生铁,铸铁制品,
 Cast net : 投网,撒网,掩网,
 ```
+- extra
+```
+extra:额外的;
+美式：['ɛkstrə];英式：['ekstrə];
+n. 临时演员；号外；额外的事物；上等产品
+adj. 额外的，另外收费的；特大的
+adv. 特别地，非常；另外
+网络释义：
+Extra : 益达,额外的,临时演员,
+Yle Extra : YLE Extra,Yle Extra,
+tax extra : 另加税金,
+```
+- peer
+```
+peer:同行;
+美式：[pɪr];英式：[pɪə];
+vi. 凝视，盯着看；窥视
+n. (Peer)人名；(英、巴基)皮尔
+n. 贵族；同等的人
+vt. 封为贵族；与…同等
+网络释义：
+Peer : 佩尔,对等,凝视,
+life peer : 终身贵族,终身贵族,生命同行,
+Peer Education : 同伴教育,朋辈教育,同侪教育,
+```
+- constant
+```
+constant:常数;
+美式：['kɑnstənt];英式：['kɒnst(ə)nt];
+n. [数] 常数；恒量
+n. (Constant)人名；(德)康斯坦特
+adj. 不变的；恒定的；经常的
+网络释义：
+constant : 常量,常数,不变,
+Boltzmann constant : 波兹曼常数,玻尔兹曼常数,玻耳兹曼常数,
+Rydberg constant : 里德伯常量,里德伯常数,里德伯恒量,
+```
+- policy
+```
+policy:政策;
+美式：['pɑləsi];英式：['pɒləsɪ];
+n. 政策，方针；保险单
+网络释义：
+Policy : 政策,方针,保险单,
+monetary policy : 货币政策,金融政策,货泉政策,
+quality policy : 质量方针,品质政策,品质方针,
+```
