add web fragment

--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -154,3 +154,26 @@ Policy : 政策,方针,保险单,
 monetary policy : 货币政策,金融政策,货泉政策,
 quality policy : 质量方针,品质政策,品质方针,
 ```
+- avatar
+```
+avatar:《阿凡达》;
+美式：['ævətɑr];英式：['ævətɑː];
+n. （印度教，佛教）神的化身；（某种思想或品质）化身；（网络）头像，替身
+n. (Avatar) 电影《 阿凡达》
+网络释义：
+Avatar : 阿凡达,头像,化身 (印度教),
+Avatar Trilogy : 天神凡身三部曲,圣者三部曲,三部曲,
+avatar days : 化身日,
+```
+- crop
+```
+crop:作物;
+美式：[krɑp];英式：[krɒp];
+n. 产量；农作物；庄稼；平头
+vt. 种植；收割；修剪；剪短
+vi. 收获
+网络释义：
+crop : 农作物,嗉囊,裁切,
+Crop circle : 麦田圈,麦田圈,麦田怪圈,
+Crop Circles : 麦田圆圈,麦田怪圈,麦田圈,
+```
