add web site view FAB

--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -177,3 +177,27 @@ crop : 农作物,嗉囊,裁切,
 Crop circle : 麦田圈,麦田圈,麦田怪圈,
 Crop Circles : 麦田圆圈,麦田怪圈,麦田圈,
 ```
+- indicator
+```
+indicator:指示器;
+美式：['ɪndɪketɚ];英式：['ɪndɪkeɪtə];
+n. 指示器；[试剂] 指示剂；[计] 指示符；压力计
+网络释义：
+indicator : 指示器,指标,指示剂,
+dial indicator : 针盘指示表,度盘式指示表,千分表,
+direction indicator : 方向标,中心指示器,方向指示器,
+```
+- selected
+```
+selected:选择;
+美式：[sə'lɛktɪd];英式：[sɪ'lektɪd];
+adj. 挑选出来的
+网络释义：
+Selected : 选定,选中,入选,
+Save selected : 保存选择,保存当前选择,保存所选择的对象,
+Band selected : 手工挑选,手工遴选,
+```
+- align Parent Bottom
+```
+父母底部对齐;
+```
