--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -201,3 +201,16 @@ Band selected : 手工挑选,手工遴选,
 ```
 父母底部对齐;
 ```
+- shadow
+```
+shadow:影子;
+美式：['ʃædo];英式：['ʃædəʊ];
+n. 阴影；影子；幽灵；庇护；隐蔽处
+adj. 影子内阁的
+vt. 遮蔽；使朦胧；尾随；预示
+vi. 变阴暗
+网络释义：
+Shadow : 影子,阴影,影,
+Shadow Lady : SHADOW LADY,Shadow Lady,幻影女神,
+Drop Shadow : 投影,阴影,产生阴影,
+```
