--- a/leanchat/src/main/res/values/strings.xml
+++ b/leanchat/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">LeanChat</string>
+    <string name="app_name">MapChat</string>
 
 
     <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
