--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -214,3 +214,24 @@ Shadow : 影子,阴影,影,
 Shadow Lady : SHADOW LADY,Shadow Lady,幻影女神,
 Drop Shadow : 投影,阴影,产生阴影,
 ```
+- horizontal
+```
+horizontal:水平;
+美式：['hɔrə'zɑntl];英式：[hɒrɪ'zɒnt(ə)l];
+n. 水平线，水平面；水平位置
+adj. 水平的；地平线的；同一阶层的
+网络释义：
+Horizontal : 水平,横向,卧式,
+horizontal merger : 横向兼并,横向合并,横向兼井,
+HORIZONTAL SUBSYSTEM : 水平布线子系统,水平区子系统,水平子系统,
+```
+- alignment
+```
+alignment:对齐;
+美式：[ə'laɪnmənt];英式：[ə'laɪnm(ə)nt];
+n. 队列，成直线；校准；结盟
+网络释义：
+Alignment : 对齐,阵营 (龙与地下城),对准,
+optical alignment : 光学对准,光学准直,光学调准,
+alignment chart : 列线图,诺模图,线算图,
+```
