--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -235,3 +235,37 @@ Alignment : 对齐,阵营 (龙与地下城),对准,
 optical alignment : 光学对准,光学准直,光学调准,
 alignment chart : 列线图,诺模图,线算图,
 ```
+- vertical
+```
+vertical:垂直;
+美式：['vɝtɪkl];英式：['vɜːtɪk(ə)l];
+n. 垂直线，垂直面
+adj. 垂直的，直立的；[解剖] 头顶的，顶点的
+网络释义：
+Vertical : 垂直,立式的,弹跳,
+Vertical angles : 对顶角,对顶角,垂直角,
+Flip Vertical : 垂直翻转,垂直方向翻转,垂直反转,
+```
+- relative
+```
+relative:相对;
+美式：['rɛlətɪv];英式：['relətɪv];
+n. 亲戚；相关物；[语] 关系词；亲缘植物
+adj. 相对的；有关系的；成比例的
+网络释义：
+Relative : 亲戚,亲属,相对的,
+Relative risk : 相对风险,相对风险,相对危险度,
+relative motion : 相对运动,相对移动,相对活动,
+```
+- below
+```
+below:下面;
+美式：[bɪ'lo];英式：[bɪ'ləʊ];
+prep. 在…下面
+adv. 在下面，在较低处；在本页下面
+n. (Below)人名；(英、德、芬、瑞典)贝洛
+网络释义：
+Below : 下边,下方,下列,
+go below : 下降,走下甲板,
+below prep : 在,之下,在…下面,
+```
